# DictionaryApp

./: CMakeLists.txt  DictTypes.h  Dictionary.cpp  Dictionary.h  DictionaryApp.cpp  DictionaryApp.h  DictionaryApp.kdev4  README  main.cpp  worditerator.cpp  worditerator.h
